--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -14,4 +14,9 @@
         <item name="fontFamily">@font/jua</item>
         <item name="cornerRadius">10dp</item>
     </style>
+
+    <style name="imagenRedonda">
+        <item name="cornerFamily">rounded</item>
+        <item name="cornerSize">50%</item>
+    </style>
 </resources>
